--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,8 +1,5 @@
-Flask==2.1.1
-openai==0.27.2
-llama-index==0.5.4  # Replace with the correct version if necessary
-pydantic==1.9.1
-deeplake==3.6.4  # Include only if used in your project
-Pillow==9.1.0  # For image processing (PIL)
-matplotlib==3.5.1  # For plotting if used in your script
-pandas==1.4.2  # For data handling if necessary
+Flask==2.3.2
+openai==0.27.6
+pydantic==1.10.7
+llama-index==0.5.9  # or the specific version you're using
+typing-extensions==4.7.1  # Ensures compatibility with typing extensions used in pydantic
