--- a/docs/vercel.json
+++ b/docs/vercel.json
@@ -1,15 +1,14 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/chat.py",
-      "use": "@vercel/python"
+  "functions": {
+    "api/chat.py": {
+      "runtime": "python3.9"
     }
-  ],
+  },
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "api/chat.py"
+      "src": "/api/chat",
+      "dest": "/api/chat.py"
     }
   ]
 }
