--- a/docs/vercel.json
+++ b/docs/vercel.json
@@ -1,15 +1,19 @@
 {
-  "version": 2,
   "functions": {
-    "api/chat.py": {
-      "runtime": "python3.9"
+    "api/*.js": {
+      "runtime": "nodejs14.x"
     }
   },
+  "builds": [
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
-      "src": "/api/chat",
-      "methods": ["GET", "POST", "OPTIONS"],
-      "dest": "/api/chat.py"
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
     }
   ]
 }
