--- a/render.yaml
+++ b/render.yaml
@@ -1,23 +1,7 @@
-jobs:
-  build-and-test-backend:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.9]
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install Python dependencies
-        run: |
-          cd server
-          pip install --no-cache-dir -r ./dependencies/requirements.txt
-
-      # - name: Run tests
-      #   run: |
-      #     cd server
-      #     pytest
+services:
+- type: web
+  name: YourServiceName
+  env: python
+  buildCommand: pip install -r backend/dependencies/requirements.txt
+  startCommand: python backend/app.py  # Replace this with your actual start command
+  autoDeploy: true
