--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: YourServiceName
     env: python
-    buildCommand: cd backend && pip install --no-cache-dir -r ./dependencies/requirements.txt
-    startCommand: python app.py  # Adjust this according to your entry script
+    buildCommand: |
+      cd backend
+      pip install --no-cache-dir -r ./dependencies/requirements.txt
+    startCommand: python src/app.py  # Adjust this to the correct entry point for your application
     autoDeploy: true
